# ZeroMQ-XOP

./: .clang-tidy  .gitattributes  .gitlab-ci.yml  .gitmodules  .pre-commit-config.yaml  Readme.rst  ctags.cnf
doc/: conf.py
examples/: CMakeLists.txt  Readme.rst  cli-client.cpp
help/: ZeroMQ.ihf
output/igor8/mac/libzmq/Debug/lib/: libzmq.5.2.4.dylib
output/igor8/mac/mac/libzmq/Debug/lib/pkgconfig/: libzmq.pc
output/igor8/win/x64/libzmq/Debug/CMake/: ZeroMQTargets-debug.cmake
output/igor8/win/x64/libzmq/Release/CMake/: ZeroMQTargets-release.cmake
output/igor8/win/x64/libzmq/Release/share/zmq/: NEWS.txt
output/libzmq/mac/Release/lib/: libzmq.5.dylib
output/libzmq/win/x86/Debug/lib/: libzmq-v142-mt-gd-4_3_4.lib
output/libzmq/win/x86/Release/lib/: libzmq-v142-mt-s-4_3_4.lib
output/mac/libzmq/Debug/lib/: libzmq.4.2.3.dylib
output/mac/libzmq/Debug/lib/cmake/ZeroMQ/: ZeroMQTargets-debug.cmake
output/mac/libzmq/Debug/lib/pkgconfig/: libzmq.pc
output/mac/libzmq/Debug/share/cmake/ZeroMQ/: ZeroMQConfig.cmake  ZeroMQConfigVersion.cmake
output/mac/libzmq/Release/lib/: libzmq.4.2.3.dylib  libzmq.5.2.4.dylib  libzmq.dylib
output/mac/libzmq/Release/lib/cmake/ZeroMQ/: ZeroMQTargets-release.cmake  ZeroMQTargets.cmake
output/mac/libzmq/Release/lib/pkgconfig/: libzmq.pc
output/win/x64/libzmq/Debug/lib/: libzmq-v142-mt-gd-4_2_3.lib  libzmq-v142-mt-gd-4_3_4.lib
output/win/x64/libzmq/Debug/lib/pkgconfig/: libzmq.pc
output/win/x64/libzmq/Debug/share/cmake/ZeroMQ/: ZeroMQConfig.cmake
output/win/x64/libzmq/Debug/share/zmq/: NEWS.txt
output/win/x64/libzmq/Release/lib/: libzmq-v142-mt-4_2_3.lib  libzmq-v142-mt-4_3_4.lib  libzmq-v142-mt-s-4_2_3.lib
output/win/x64/libzmq/Release/lib/pkgconfig/: libzmq.pc
output/win/x64/libzmq/Release/share/cmake/ZeroMQ/: ZeroMQConfigVersion.cmake
output/win/x64/libzmq/Release/share/zmq/: AUTHORS.txt
output/win/x86/: ZeroMQ.xop
output/win/x86/libzmq/Debug/CMake/: ZeroMQConfig.cmake
output/win/x86/libzmq/Debug/lib/: libzmq-v142-mt-gd-4_2_3.lib
output/win/x86/libzmq/Debug/lib/pkgconfig/: libzmq.pc
output/win/x86/libzmq/Release/lib/: libzmq-v142-mt-4_2_3.lib  libzmq-v142-mt-4_3_4.lib  libzmq-v142-mt-s-4_2_3.lib
output/win/x86/libzmq/Release/lib/pkgconfig/: libzmq.pc
output/win/x86/libzmq/Release/share/cmake/ZeroMQ/: ZeroMQConfigVersion.cmake
procedures/: ZeroMQ_Interop.ipf
src/: CMakeLists.txt  CallFunctionOperation.cpp  CallFunctionOperation.h  CallFunctionParameterHandler.cpp  CallFunctionParameterHandler.h  ConcurrentQueue.h  ConcurrentXOPNotice.cpp  ConcurrentXOPNotice.h  CustomExceptions.cpp  CustomExceptions.h  Errors.h  GlobalData.cpp  GlobalData.h  HeartbeatPublisher.cpp  HeartbeatPublisher.h  HelperFunctions.cpp  HelperFunctions.h  HistoryGrabber.cpp  HistoryGrabber.h  IgorTypeUnion.h  Logging.cpp  Logging.h  MessageHandler.cpp  MessageHandler.h  RequestInterface.cpp  RequestInterface.h  RequestInterfaceException.cpp  RequestInterfaceException.h  SerializeWave.cpp  SerializeWave.h  SocketWithMutex.h  ZeroMQ.cpp  ZeroMQ.h  ZeroMQ.r  ZeroMQ.r.in  ZeroMQ.rc  ZeroMQWinCustom.rc  ZeroMQWinCustom.rc.in  cmake_config.h.in  functions.cpp  (+31 more)
tests/: RunTests.pxp  UBSAN.supp  zmq_bind.ipf  zmq_connect.ipf  zmq_main_test.ipf  zmq_memory_leaks.ipf  zmq_pub_sub.ipf  zmq_pub_sub_multi.ipf  zmq_recv_send.ipf  zmq_set.ipf  zmq_set_interceptor_func.ipf  zmq_set_logging_template.ipf  zmq_start_handler.ipf  zmq_stop.ipf  zmq_stop_handler.ipf  zmq_test_callfunction.ipf  zmq_test_interop.ipf  zmq_test_serializeWave.ipf
xop-stub-generator/: interface.h  run.sh  xop-stub-generator.pl
